Controlador para Actualizar, mostrar detalle y mostrar todos y crear salas
